fixed overflow issue

--- a/frontend-uknow/src/pages/LandingPage/LandingPage.module.css
+++ b/frontend-uknow/src/pages/LandingPage/LandingPage.module.css
@@ -1,9 +1,12 @@
-*{
+body {
   overflow: hidden;
   max-height:150vh;
 }
 
 .hero{
+  
+  overflow: hidden;
+  max-height:150vh;
     display: flex;
     flex-direction: column;
     align-items: center;
